--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,17 @@ org.gradle.jvmargs=-Xmx1G
 	minecraft_version=1.19.2
 	yarn_mappings=1.19.2+build.4
 	loader_version=0.14.9
+# 1.18.2 settings below
+	#minecraft_version=1.18.2
+	#yarn_mappings=1.18.2+build.4
+	#loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 1.10-1.19
+	mod_version = 1.11-1.19
 	maven_group = net.sweenus
 	archives_base_name = simplyswords
 
 # Dependencies
 	fabric_version=0.60.0+1.19.2
+# 1.18.2 below
+	#fabric_version=0.58.0+1.18.2
