--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,19 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx6G
+org.gradle.jvmargs=-Xmx2048M
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.4
-	loader_version=0.14.9
-# 1.18.2 settings below
-	#minecraft_version=1.18.2
-	#yarn_mappings=1.18.2+build.4
-	#loader_version=0.14.9
+minecraft_version=1.19.2
+enabled_platforms=fabric,forge
 
-# Mod Properties
-	mod_version = 1.27-1.19.x
-	maven_group = net.sweenus
-	archives_base_name = simplyswords
+archives_base_name=simplyswords
+mod_version=1.0.0
+maven_group=net.sweenus
 
-# Dependencies
-	fabric_version=0.60.0+1.19.2
-# 1.18.2 below
-	#fabric_version=0.58.0+1.18.2
+architectury_version=6.2.43
+
+fabric_loader_version=0.14.9
+fabric_api_version=0.59.0+1.19.2
+
+forge_version=1.19.2-43.0.8
+yarn_mappings=1.19.2+build.18
+
+
+
