--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=simplyswords
-mod_version=1.30
+mod_version=1.31-1.19.x
 maven_group=net.sweenus
 
 architectury_version=6.2.43
