--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 modLoader = "javafml"
 loaderVersion = "[41,)"
 issueTrackerURL = "https://github.com/Sweenus/SimplySwords/issues"
-license = "GNU LGPLv3"
+license = "All Rights Reserved"
 
 [[mods]]
 modId = "simplyswords"
