LICENSE adjustment Version iteration Gobber axe recipes changed to prevent conflict Config option added to allow loot in villages (loot table modifiers adjusted to reflect)

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 modLoader = "javafml"
 loaderVersion = "[41,)"
 issueTrackerURL = "https://github.com/Sweenus/SimplySwords/issues"
-license = "All Rights Reserved"
+license = "Timefall Development License"
 
 [[mods]]
 modId = "simplyswords"
