--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[41,)"
+loaderVersion = "[39,)"
 issueTrackerURL = "https://github.com/Sweenus/SimplySwords/issues"
 license = "Timefall Development License"
 
@@ -16,20 +16,20 @@ logoFile = "SimplySwordsLogoFinal2.gif"
 [[dependencies.simplyswords]]
 modId = "forge"
 mandatory = true
-versionRange = "[41,)"
+versionRange = "[39,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.simplyswords]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19,)"
+versionRange = "[1.18,1.18.3)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.simplyswords]]
 modId = "architectury"
 mandatory = true
-versionRange = "[5.12.42,)"
+versionRange = "[4.9.84,)"
 ordering = "AFTER"
 side = "BOTH"
