--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 org.gradle.jvmargs=-Xmx4048M
 
-minecraft_version=1.19.2
+minecraft_version=1.18.2
 enabled_platforms=fabric,forge
 
 archives_base_name=simplyswords
-mod_version=1.40-1.19.2
+mod_version=1.34-1.18.x
 maven_group=net.sweenus
 
-architectury_version=6.4.62
+architectury_version=4.10.86
 
-fabric_loader_version=0.14.12
-fabric_api_version=0.72.0+1.19.2
+fabric_loader_version=0.14.10
+fabric_api_version=0.66.0+1.18.2
 
-forge_version=1.19.2-43.2.0
-yarn_mappings=1.19.2+build.28
+forge_version=1.18.2-40.1.0
+yarn_mappings=1.18.2+build.4
 
 
 
