--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ minecraft_version=1.18.2
 enabled_platforms=fabric,forge
 
 archives_base_name=simplyswords
-mod_version=1.34-1.18.x
+mod_version=1.40-1.18.2
 maven_group=net.sweenus
 
-architectury_version=4.10.86
+architectury_version=4.10.88
 
-fabric_loader_version=0.14.10
-fabric_api_version=0.66.0+1.18.2
+fabric_loader_version=0.14.12
+fabric_api_version=0.67.1+1.18.2
 
-forge_version=1.18.2-40.1.0
+forge_version=1.18.2-40.2.0
 yarn_mappings=1.18.2+build.4
 
 
