--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -24,7 +24,7 @@ side = "BOTH"
 [[dependencies.simplyswords]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19, 1.19.2)"
+versionRange = "[1.19.3,)"
 ordering = "NONE"
 side = "BOTH"
 
