--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -27,6 +27,13 @@ repositories {
         }
     }
     maven { url 'https://maven.blamejared.com' }
+    maven {
+        name = 'Modrinth'
+        url = 'https://api.modrinth.com/maven'
+        content {
+            includeGroup 'maven.modrinth'
+        }
+    }
 }
 
 dependencies {
