--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     //modImplementation "curse.maven:amethyst-imbuement-608261:4514358"
 
     // Patchouli
-    //modImplementation "vazkii.patchouli:Patchouli:1.19.2-77-FABRIC"
+    modImplementation "vazkii.patchouli:Patchouli:1.20.1-81-FABRIC"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
