Refactored Tags Related to Mythic Metals, Updated Dependency Notation  - Added the `tools.json` tag to bring Simply Swords Mythic Metals additions into congruency. The `tools.json` file is a nested tag file which calls the `x_tools.json` files from the `simplyswords` tag directory  - Renamed `x_gear.json` files which were associated with Mythic Metals to `x_tools.json` to match nomenclature used by Mythic Metals  - Moved `x_tools.json` files from `mythicmetals` tag directory to the `simplyswords` tag directory as these tags are no longer used, internally, by Mythic Metals and are now, technically, Simply Swords tags  - Updated Mythic Metals suggested dependency to `>=0.18.2` (tag refactor)  - Updated Better Combat recommended dependency to `>=1.7.2` (lowest 1.20.x version)

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -34,6 +34,7 @@ repositories {
             includeGroup 'maven.modrinth'
         }
     }
+    maven { url = "https://jitpack.io" }
 }
 
 dependencies {
@@ -43,7 +44,7 @@ dependencies {
     modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
     // Mythic Metals
-    modImplementation "curse.maven:mythicmetals-410127:4578567"
+    modImplementation "curse.maven:mythicmetals-410127:4644233"
     // slug / curseforge project ID / file ID "check url"
 
     // Amethyst Imbuement
@@ -51,6 +52,8 @@ dependencies {
 
     // Patchouli
     modImplementation "vazkii.patchouli:Patchouli:1.20.1-81-FABRIC"
+
+    include(implementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:${rootProject.mixin_extras_version}")))
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
