--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,6 @@ fabric_api_version=0.84.0+1.20.1
 forge_version=1.20.1-47.0.19
 yarn_mappings=1.20.1+build.8
 
+mixin_extras_version=0.2.0-beta.8
 
 
