--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     // Patchouli
     modImplementation "vazkii.patchouli:Patchouli:1.20.1-81-FABRIC"
 
-    include(implementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:${rootProject.mixin_extras_version}")))
+    modImplementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:${rootProject.mixin_extras_version}"))
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
