Spell Power Attributes Compatibility - When spell_power is installed, weapons will scale with spell attributes by default - Added config option to disable spell_power scaling - Added fix for broken right click weapons when Spell Engine is installed - Added 'Hold Right Click' tooltip to relevant weapons

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     modImplementation "curse.maven:mythicmetals-410127:4644233"
     // slug / curseforge project ID / file ID "check url"
 
+    modImplementation "maven.modrinth:spell-power:${rootProject.spellpower_version}-fabric"
+
     // Amethyst Imbuement
     //modImplementation "curse.maven:amethyst-imbuement-608261:4514358"
 
