--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,6 @@ forge_version=1.20.1-47.0.19
 yarn_mappings=1.20.1+build.8
 
 mixin_extras_version=0.2.0-beta.8
+spellpower_version=0.9.13+1.20.1
 
 
