--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -35,6 +35,8 @@ repositories {
         }
     }
     maven { url = "https://jitpack.io" }
+    maven { url "https://maven.shedaniel.me/" }
+    maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 dependencies {
@@ -42,12 +44,16 @@ dependencies {
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
+    modCompileOnly("com.terraformersmc:modmenu:${rootProject.mod_menu_version}") { transitive false }
 
     // Mythic Metals
     modImplementation "curse.maven:mythicmetals-410127:4644233"
     // slug / curseforge project ID / file ID "check url"
 
     modImplementation "maven.modrinth:spell-power:${rootProject.spellpower_version}-fabric"
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${rootProject.cloth_config_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 
     // Amethyst Imbuement
     //modImplementation "curse.maven:amethyst-imbuement-608261:4514358"
