--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.20.1
 enabled_platforms=fabric,forge
 
 archives_base_name=simplyswords
-mod_version=1.48.2-1.20.1
+mod_version=1.48.3-1.20.1
 maven_group=net.sweenus
 
 architectury_version=9.0.8
@@ -12,10 +12,10 @@ architectury_version=9.0.8
 fabric_loader_version=0.14.21
 fabric_api_version=0.84.0+1.20.1
 
-forge_version=1.20.1-47.0.19
+forge_version=1.20.1-47.1.1
 yarn_mappings=1.20.1+build.8
 
 mixin_extras_version=0.2.0-beta.8
 spellpower_version=0.9.13+1.20.1
-
-
+cloth_config_version=11.1.106
+mod_menu_version=4.0.5
