Fixed incorrect cloth_config dependency for forge

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -36,7 +36,7 @@ ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.simplyswords]]
-modId = "cloth-config"
+modId = "cloth_config"
 mandatory = true
 versionRange = "[11.1.106,)"
 ordering = "AFTER"
