Added KreloX to the credits, for their sizeable contributions

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ modId = "simplyswords"
 version = "${version}"
 displayName = "Simply Swords"
 authors = "Sweenus"
-credits="Konsyliarz42 (Art)"
+credits="Konsyliarz42 (Art), KreloX (Contributor)"
 description = '''
 A variety of unique weapons to add to your minecraft repertoire
 '''
