--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -34,6 +34,11 @@ repositories {
             includeGroup 'maven.modrinth'
         }
     }
+    mavenLocal()
+    maven {
+        name 'Gegy'
+        url 'https://maven.gegy.dev'
+    }
     maven { url = "https://jitpack.io" }
     maven { url "https://maven.shedaniel.me/" }
     maven { url "https://maven.terraformersmc.com/releases/" }
@@ -51,6 +56,8 @@ dependencies {
     // slug / curseforge project ID / file ID "check url"
 
     modImplementation "maven.modrinth:spell-power:${rootProject.spellpower_version}-fabric"
+    modImplementation "curse.maven:lambdynamiclights-393442:${rootProject.lambdynlights_version}"
+    include modImplementation("dev.lambdaurora:spruceui:${rootProject.spruceui_version}")
     modApi("me.shedaniel.cloth:cloth-config-fabric:${rootProject.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
