--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,7 @@ yarn_mappings=1.20.1+build.8
 
 mixin_extras_version=0.2.0-beta.8
 spellpower_version=0.9.13+1.20.1
+lambdynlights_version=4597897
+spruceui_version=5.0.0+1.20
 cloth_config_version=11.1.106
 mod_menu_version=4.0.5
