--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ lambdynlights_version=4597897
 spruceui_version=5.0.0+1.20
 cloth_config_version=11.1.106
 mod_menu_version=4.0.5
+eldritch_end_version=5035580
